# holland_marine

./: .env.example  .gitignore  CLAUDE.md  app.py  pyproject.toml
implementation/: answer.py  config.py  ingest.py
knowledge-base/automation/: praxis_mega-guard_engineering-guide_v6.33.md
